<resources>
    <string name="app_name">SMC-Admin</string>

    <!--  Provisory strings -->
    <string name="logName">Your Name Here</string>
    <string name="userEmail">YourEmail@here.com</string>

    <!-- Navigation strings -->
    <string name="account">Account</string>
    <string name="place">Your Place</string>
    <string name="notification">Notifications</string>
    <string name="logout">Logout</string>
    <string name="orSeparator">or</string>

    <!-- Login Dialog -->
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- Toast-->
    <string name="success_login">Successful Login!</string>
    <string name="failed_login">Please fill any empty fields!</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_google">Login with Google</string>
    <string name="register">Create Account</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="new_here">New Here?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="company">Company</string>
    <string name="company_type">Company Type(eg. Pub, Bar, Restaurant..)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_to_terms">By clicking \'Create Account\' you agree to our Terms and Conditions</string>

    <!--Hints -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_your_place">Update your Place</string>
    <string name="welcome_place">Welcome to your Place</string>
    <string name="owner">Owner</string>
    <string name="phone">Phone Number</string>
    <string name="location_name">Location Name</string>
    <string name="location_type">Location Type</string>
    <string name="address">Address</string>
    <string name="photo_storage">Add thumbnail to you place</string>
    <string name="tvNotification">Here you can send Notifications to subscribed places</string>
    <string name="send_notification">Send Notification</string>
    <string name="image_name">Image Name</string>
    <string name="to_be_replaced">To be replaced</string>
    <string name="add_new_place">Add new place</string>
    <string name="description">Description</string>
    <string name="send_subscribed_notification">Select subscribed place to send notification</string>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="add_profile_cover">Add profile cover</string>
    <string name="account_actions">Account actions</string>
    <string name="account_customization">Account customization</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_place_thumbnail">Update place thumbnail</string>
    <string name="update_place">Update place</string>
</resources>
