<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    android:padding="10dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/padding_layout_login"
        android:paddingRight="@dimen/padding_layout_login"
        android:orientation="vertical">

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_an_account"
            android:textAlignment="center"
            android:textColor="@color/colorTextWhite"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etVerifyEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/confirm_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etVerifyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/agreeToTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextWhite"
            android:text="@string/agree_to_terms"/>

        <Button
            android:id="@+id/create_account_button"
            style="@style/account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/create_account" />


    </LinearLayout>
</RelativeLayout>