<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:backgroundTint="@color/colorPrimary"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:backgroundTint="@color/colorPrimary"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textColor="@color/colorTextWhite"
        android:background="@drawable/background_one"/>
</LinearLayout>