<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background_one"
    android:orientation="vertical"
    tools:context=".LoginOptions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="@dimen/padding_layout_login"
        android:paddingRight="@dimen/padding_layout_login"
        android:orientation="vertical">
        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextWhite"
            android:layout_marginTop="50dp"
            android:text="@string/welcome"/>
        <Button
            android:id="@+id/login_dialog"
            style="@style/account_button"
            android:drawableStart="@drawable/ic_mail"
            android:paddingStart="@dimen/padding_account_button"
            android:paddingEnd="@dimen/padding_account_button"
            android:layout_marginTop="50dp"
            android:text="@string/login_with_email" />
        <Button
            android:id="@+id/google_login"
            style="@style/account_button"
            android:drawableStart="@drawable/ic_google"
            android:paddingStart="@dimen/padding_account_button"
            android:paddingEnd="@dimen/padding_account_button"
            android:layout_marginTop="50dp"
            android:text="@string/login_with_google" />
    </LinearLayout>

    <include layout="@layout/separator_options"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_layout_login"
        android:paddingRight="@dimen/padding_layout_login"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorTextWhite"
            android:layout_marginTop="50dp"
            android:text="@string/new_here"/>

        <Button
            android:id="@+id/register"
            style="@style/account_button"
            android:layout_marginTop="60dp"
            android:text="@string/register" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorTextWhite"
            android:text="@string/terms_and_conditions"/>

    </LinearLayout>

</LinearLayout>