<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/accountCustomization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_customization"
            android:textSize="23sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"/>
        <View
            android:layout_below="@id/accountCustomization"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrey" />

        <ImageView
            android:id="@+id/imgCover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:layout_below="@id/accountCustomization"
            android:background="@drawable/header_background"
            android:scaleType="centerCrop" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/app_logo" />


        <Button
            android:id="@+id/btnAddProfilePic"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgCover"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_layout"
            android:backgroundTint="@color/colorPrimaryLight"
            android:text="@string/add_profile_picture"
            android:textColor="@color/colorTextWhite"
            android:textSize="19sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnAddProfileCover"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btnAddProfilePic"
            android:layout_below="@+id/imgCover"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_layout"
            android:backgroundTint="@color/colorPrimaryLight"
            android:text="@string/add_profile_cover"
            android:textColor="@color/colorTextWhite"
            android:textSize="19sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnProfileUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAddProfilePic"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_layout"
            android:backgroundTint="@color/colorPrimaryLight"
            android:text="@string/update_profile"
            android:textColor="@color/colorTextWhite"
            android:textSize="19sp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/accountActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnProfileUpdate"
            android:text="@string/account_actions"
            android:textSize="23sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="15dp"/>
        <View
            android:layout_below="@id/accountActions"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrey" />

        <Button
            android:id="@+id/btnDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accountActions"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/btn_layout"
            android:backgroundTint="@color/colorPrimaryLight"
            android:text="@string/delete_account"
            android:textColor="@color/colorTextWhite"
            android:textSize="19sp"
            android:textAllCaps="false"/>
    </RelativeLayout>


</FrameLayout>